2006-02-23  Junichi Uekawa  <dancer@debian.org>

	* pbuilder-modules (pbuilder-options): remove NONUSMIRRORSITE

	* pbuilder.8: 
	* pbuilder-user-mode-linux.1: remove --nonusmirror

	* pbuilder-uml-checkparams: remove --nonusmirror

	* pbuilder-checkparams: remove --nonusmirror

	* pbuilder-modules (pbuilder-options): remove reference to  --nonusmirror [non-US mirror location] option.

	* pbuilderrc (MIRRORSITE): remove non-US

	* testsuite/regression/344089-initscripts-inetd-workaround-check.sh: remove, bugs are all resolved.

2006-02-12  Junichi Uekawa  <dancer@debian.org>

	* pbuilder-updatebuildenv: 
	* pbuilder-createbuildenv: 
	* pbuilder: move apt-get clean after umountproc, so that you can
	probably bind-mount /var/cache/apt/archives

2006-02-11  Junichi Uekawa  <dancer@debian.org>

	* pbuilder-satisfydepends: quote echo INSTALLPKGMULTI

	* pbuilder: apt-get clean after save_aptcache.

	* pbuilderrc.5: document that EXTRAPACKAGES is a space-delimited list.

2006-01-30  Junichi Uekawa  <dancer@debian.org>

	* Makefile: install the script

	* examples/G50-initscripts-2.86.ds1-11-cdebootstrap0.3.9.sh: implement workaround.

	* pbuilder.8: document G hook.

	* pbuilder-createbuildenv: add G hook

	* testsuite/run-test.sh: use the workaround dir for testing.

	* Makefile: install workaround hooks to
	/usr/share/doc/pbuilder/examples/workaround

2006-01-24  Junichi Uekawa  <dancer@debian.org>

	* examples/B92test-pkg: improve the script a bit; do not fail if
	apt-get install of a previous version fails, and cd to the package
	directory before test starts.

2006-01-13  Junichi Uekawa  <dancer@debian.org>

	* debian/TODO: update notes on cowdancer.

	* Documentation/pbuilder-doc.xml (BINDMOUNTS): add note on regression testing.

2006-01-12  Junichi Uekawa  <dancer@debian.org>

	* pbuilder-modules: replace ../project/experimental with experimental

2006-01-06  Junichi Uekawa  <dancer@debian.org>
