@@ -1,1 +1,7 @@
+pbuilder-doc.aux
+pbuilder-doc.glo
 pbuilder-doc.html
+pbuilder-doc.idx
+pbuilder-doc.log
+pbuilder-doc.out
+pbuilder-doc.pdf
