@@ -2,9 +2,9 @@
 <!DOCTYPE book PUBLIC "-//OASIS//DTD DocBook XML V4.2//EN" "/usr/share/sgml/docbook/dtd/xml/4.2/docbookx.dtd"> 
 <!-- the original of this documentation is in pbuilder source tar-ball,
   and the latest version is found in CVS repository. -->
-<book>
+<book xml:lang="en">
   <bookinfo>
-    <date>2005-11-03</date>
+    <date>2006-3-8</date>
     <title>pbuilder User's Manual</title>
     <abbrev>pbuilder-doc</abbrev>
     <subtitle>Usage and operations</subtitle>
@@ -16,6 +16,7 @@
       </author>
     </authorgroup>
   </bookinfo>
+
   <!-- FIXME: consistent markup of commands, files, and variables -->
   <chapter>
     <title>Introducing pbuilder</title>
@@ -1038,7 +1039,7 @@ $ sudo pbuilder update --hookdir ~/loginhooks/E10shell
       </para>
       <para>
 	<screen>
-<command>pbuilder create --distribution sid --debootstrapopts "--arch=i386" --basetgz /var/cache/pbuilder/base-i386.tgz --mirror http://ftp.jp.debian.org/debian</command>
+<command>pbuilder create --distribution sid --debootstrapopts --arch --debootstrapopts i386 --basetgz /var/cache/pbuilder/base-i386.tgz --mirror http://ftp.jp.debian.org/debian</command>
 <command>linux32 pbuilder build --basetgz /var/cache/pbuilder/base-i386.tgz</command>
 	</screen>
       </para>
@@ -1245,6 +1246,8 @@ cvs -z3 -d:pserver:anonymous@cvs.alioth.debian.org:/cvsroot/pbuilder co pbuilder
       <table>
 	<title>Directory Structure outside the chroot </title>
 	<tgroup cols="2">
+	  <colspec colnum="1" colname="c1" colwidth="1*" align="left" />
+	  <colspec colnum="2" colname="c2" colwidth="1*" align="left" />
 	  <thead>
 	    <row>
 	      <entry>Directory</entry>
@@ -1307,6 +1310,8 @@ cvs -z3 -d:pserver:anonymous@cvs.alioth.debian.org:/cvsroot/pbuilder co pbuilder
       <table>
 	<title>Directory Structure inside the chroot </title>
 	<tgroup cols="2">
+	  <colspec colnum="1" colname="c1" colwidth="1*" align="left" />
+	  <colspec colnum="2" colname="c2" colwidth="1*" align="left" />
 	  <thead>
 	    <row>
 	      <entry>Directory</entry>
