@@ -1,3 +1,12 @@
+2006-03-08  Junichi Uekawa  <dancer@debian.org>
+
+	* Documentation/pbuilder-doc.xml: apply necessary formatting edition.
+
+	* Documentation/Makefile (%.pdf): create PDF documentation out of pbuilder-doc.
+
+	* Documentation/pbuilder-doc.xml: update amd64->i386 cross debootstrap command-line option.
+	apparently, the --arch=i386 notation doesn't seem to work anymore.
+
 2006-02-23  Junichi Uekawa  <dancer@debian.org>
 
 	* pbuilder-modules (pbuilder-options): remove NONUSMIRRORSITE
